--- a/css/black.css
+++ b/css/black.css
@@ -7,7 +7,7 @@
 	border-bottom: 1px solid #666;
 }
 .main-navigation a {
-	color: #CCC;
+	color: #fff;
 }
 .main-navigation ul ul a {
 	color: #CCC;
@@ -15,7 +15,7 @@
 .main-navigation li:hover > a,
 .main-navigation li.current_page_item a,
 .main-navigation li.current-menu-item a {
-	background-color: #666;
+	background-color: #000;
 }
 .main-navigation ul ul a:hover {
 	color: #FFF;
