--- a/style.css
+++ b/style.css
@@ -116,10 +116,10 @@ button,
 input,
 select,
 textarea {
-	color: #999;
+	color: #000;
 	font-family: 'open_sansregular', Helvetica Neue, Helvetica, Arial, sans-serif;
-	font-size: 14px;
-	font-size: 1.4rem;
+	font-size: 16px;
+	font-size: 1.6rem;
 	line-height: 1.9;
 }
 
@@ -677,7 +677,7 @@ a:active {
 
 .site-logo {
 	min-height: 70px;
-	padding-top: 2px;
+	padding-top: 24px;
 	float: left;
 }
 
@@ -868,19 +868,18 @@ a:active {
 	margin: 0 0 1.5em;
 	padding-bottom: 1.5em;
 }
-.entry-title,
-.page-title {
-	font-family: 'open_sansbold', sans-serif;
+h1.entry-title,
+h1.page-title {
+	font-family: sans-serif;
 	font-size: 16px;
-    font-size: 1.6rem;
+        font-size: 2.4em;
 	margin: 0.4em 0 0.2em;
 	padding-top: 10px;
-	text-transform: uppercase;
-	color: #222;
+	color: #00add2;
 }
-.entry-title a {
+h1.entry-title a {
 	text-decoration: none;
-	color: #222;
+	color: #00add2;
 }
 body.search .page-title,
 body.archive .page-title {
@@ -903,6 +902,7 @@ body.archive .page-title {
 .entry-content,
 .entry-summary {
 	margin: 1.5em 0 0;
+        color: #000;
 }
 .entry-content table,
 .comment-content table {
@@ -1483,6 +1483,7 @@ More info available with at http://www.apache.org/licenses/
 	font-size: 20px;
 	padding: 2px;
 	border-bottom: 1px solid #eee;
+        text-align: center;
 }
 .thumbs-more-link{
     font-family: 'open_sansbold', sans-serif;
