--- a/style.css
+++ b/style.css
@@ -1482,7 +1482,7 @@ More info available with at http://www.apache.org/licenses/
 	font-size:2rem;
 	font-size: 20px;
 	padding: 2px;
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #00add2;
         text-align: center;
 }
 .thumbs-more-link{
