--- a/style.css
+++ b/style.css
@@ -560,7 +560,7 @@ a:active {
 	width: 94%;
 }
 #content {
-	margin: 0 22% 0 0;
+	margin: 0 0 0 0;
 }
 #primary_home {
 	float: left;
@@ -1492,7 +1492,10 @@ More info available with at http://www.apache.org/licenses/
   border-bottom: 2px solid #fff;
 }
 
-#hp_custom_two_list { margin-top: 12px; }
+#hp_custom_two_list { 
+  margin-top: 12px;
+  position: relative;
+}
 
 ul#hp_custom_two_list li {
   display:inline-block;
@@ -1500,7 +1503,7 @@ ul#hp_custom_two_list li {
   border-right: 1px solid #fff;
   border-bottom: 0;
   text-align: center;
-  height: 100px;
+  height: 200px;
 }
 
 ul#hp_custom_two_list li:first-child {
@@ -1522,6 +1525,17 @@ ul#hp_custom_two_list li:last-child {
  background: url('../../../wp-content/uploads/2016/01/approach-icons.jpg');
  background-position: -667px -173px;
   border-right: 0px;
+}
+
+ul#hp_custom_two_list li p {
+ position: absolute;
+ bottom: -30px;
+ color: #fff;
+ font-size: 2em;
+ width: 200px;
+ line-height: 1.25em;
+ background-color: #00add2;
+ padding-top: 24px;
 }
 
 /* =Social Media
@@ -1740,6 +1754,26 @@ MEDIA QUERIES
 	}
 
 	ul#social-media { display:none; }
+
+        ul#hp_custom_two_list li:first-child,
+        ul#hp_custom_two_list li:nth-child(2),
+        ul#hp_custom_two_list li:nth-child(3),
+        ul#hp_custom_two_list li:last-child {
+	        background: transparent;
+                display: block;
+                border-right: 0px;
+                width: 100%;
+                height: auto;
+        }
+
+        ul#hp_custom_two_list li p {
+                 position: relative;
+                 padding: 0px;
+                 margin: 0 auto;
+                 width: 100%;
+                 bottom: auto;
+        }
+
 }
 
 /* for 860px or less */
