--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -23,7 +23,7 @@
 *********************************/ 
 .flexslider {margin: 0; padding: 0;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {max-width: 100%; height: auto; margin: 0 auto; display: block;}
+.flexslider .slides img {max-width: 100%; width: 800px; height: auto; margin: 0 auto; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
 /* Clearfix for the .slides element */
 .slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;} 
@@ -42,7 +42,7 @@ html[xmlns] .slides {display: block;}
 .carousel li {margin-right: 5px}
 /* Direction Nav */
 .flex-direction-nav {*height: 0;}
-.flex-direction-nav a {width: 60px; height: 60px; margin: -20px 0 0; display: block; background: url(images/bg_direction_nav2.png) no-repeat 0 0; position: absolute; top: 50%; z-index: 10; cursor: pointer; text-indent: -9999px; opacity: 0; -webkit-transition: all .3s ease;}
+.flex-direction-nav a {width: 60px; height: 60px; margin: -20px 0 0; display: block; background: url(images/bg_direction_nav2.png) no-repeat 0 0; position: absolute; top: 50%; z-index: 10; cursor: pointer; text-indent: -9999px; opacity: 0.8; -webkit-transition: all .3s ease;}
 .flex-direction-nav .flex-next {background-position: 100% 0; right: 5px; }
 .flex-direction-nav .flex-prev {left: 5px;}
 .flexslider:hover .flex-next {opacity: 0.8; right: 5px;}
