--- a/style.css
+++ b/style.css
@@ -1428,8 +1428,8 @@ More info available with at http://www.apache.org/licenses/
 	padding: 6px;
 	margin: 0;
 	text-align:center;
-	font-size:2.4rem;
-	font-size:24px;
+	font-size:2.2rem;
+	font-size:22px;
 	font-family: 'Raleway', sans-serif;
 }
 
@@ -1484,6 +1484,10 @@ More info available with at http://www.apache.org/licenses/
   background: url('../../../wp-content/uploads/2016/01/upstart-cover-photo.jpg') no-repeat;
   background-position: center;
   background-color: #666;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   height: auto;
   padding: 24px;
 }
@@ -1498,7 +1502,7 @@ More info available with at http://www.apache.org/licenses/
   color: #fff;
   text-align: center;
   margin: 24px auto;
-  font-size: 2.4em;
+  font-size: 2.2em;
   width: 50%;
 }
 
@@ -1554,7 +1558,7 @@ ul#hp_custom_two_list li p {
  position: absolute;
  bottom: -30px;
  color: #fff;
- font-size: 2em;
+ font-size: 1.95em;
  width: 200px;
  line-height: 1.25em;
  background-color: #00add2;
@@ -1779,7 +1783,7 @@ MEDIA QUERIES
 		padding-left:4px;
 	}
 
-	ul.social-media-list { display:none; }
+	ul.social-media-icons { display:none; }
 
         ul#hp_custom_two_list li:first-child,
         ul#hp_custom_two_list li:nth-child(2),
