--- a/style.css
+++ b/style.css
@@ -896,12 +896,7 @@ h1.entry-title a {
 	text-decoration: none;
 	color: #00add2;
 }
-body.search .page-title,
-body.archive .page-title {
-  	font-size: 16px;
-  	font-size: 1.6rem;
-    margin-bottom: 1em;
-}
+
 .entry-meta {
 	clear: both;
 	font-size: 12px;
@@ -1518,52 +1513,23 @@ More info available with at http://www.apache.org/licenses/
   border-bottom: 2px solid #fff;
 }
 
-#hp_custom_two_list { 
-  margin-top: 12px;
-  position: relative;
-}
-
-ul#hp_custom_two_list li {
-  display:inline-block;
-  width: 208px;
-  border-right: 1px solid #fff;
-  border-bottom: 0;
+#hp_custom_two table {
+  max-width: 960px;
   text-align: center;
-  height: 200px;
-  font-family: 'Raleway', sans-serif;
+  margin: 24px auto 0 auto;
 }
 
-ul#hp_custom_two_list li:first-child {
- background: url('../../../wp-content/uploads/2016/01/approach-icons.jpg');
- background-position: -21px -173px;
+#hp_custom_two table td {
+    color: #fff;
+    font-family: 'Raleway',sans-serif;
+    font-size: 2.0em;
+    line-height: 1.25em;
+    text-align: center;
+    padding: 12px;
+    border-right: 1px solid #fff;
 }
 
-ul#hp_custom_two_list li:nth-child(2) {
- background: url('../../../wp-content/uploads/2016/01/approach-icons.jpg');
- background-position: -231px -173px;
-}
-
-ul#hp_custom_two_list li:nth-child(3) {
- background: url('../../../wp-content/uploads/2016/01/approach-icons.jpg');
- background-position: -458px -173px;
-}
-
-ul#hp_custom_two_list li:last-child {
- background: url('../../../wp-content/uploads/2016/01/approach-icons.jpg');
- background-position: -667px -173px;
-  border-right: 0px;
-}
-
-ul#hp_custom_two_list li p {
- position: absolute;
- bottom: -30px;
- color: #fff;
- font-size: 1.95em;
- width: 200px;
- line-height: 1.25em;
- background-color: #00add2;
- padding-top: 24px;
-}
+#hp_custom_two table td:last-child { border-right: 0; }
 
 /* =Social Media
 ------------------------------------------------------ */
@@ -1785,24 +1751,6 @@ MEDIA QUERIES
 
 	ul.social-media-icons { display:none; }
 
-        ul#hp_custom_two_list li:first-child,
-        ul#hp_custom_two_list li:nth-child(2),
-        ul#hp_custom_two_list li:nth-child(3),
-        ul#hp_custom_two_list li:last-child {
-	        background: transparent;
-                display: block;
-                border-right: 0px;
-                width: 100%;
-                height: auto;
-        }
-
-        ul#hp_custom_two_list li p {
-                 position: relative;
-                 padding: 0px;
-                 margin: 0 auto;
-                 width: 100%;
-                 bottom: auto;
-        }
 
 }
 
@@ -1816,10 +1764,6 @@ MEDIA QUERIES
 
 /* for 800px or less */
 @media only screen and (max-width: 800px) {
-
-	#main {
-		overflow: visible;
-	}
 	#content,
 	#primary,
 	#secondary,
