--- a/style.css
+++ b/style.css
@@ -1531,6 +1531,24 @@ More info available with at http://www.apache.org/licenses/
 
 #hp_custom_two table td:last-child { border-right: 0; }
 
+#hp_custom_three {
+  background: url('../../../wp-content/uploads/2016/01/IMG_3808.jpg') no-repeat;
+  background-position: center;
+  background-color: #666;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin-top: 48px;
+  height: auto;
+  padding: 24px;
+}
+
+#hp_custom_three h3 {
+  color: #00add2;
+  border-bottom: 2px solid #00add2;
+}
+
 /* =Social Media
 ------------------------------------------------------ */
 
@@ -1601,6 +1619,7 @@ background-position: -49px 0px;
 .section_thumbnails h3,
 #hp_custom_one h3,
 #hp_custom_two h3,
+#hp_custom_three h3,
 .featuretext_middle > h3{
 	font-family: 'open_sansregular', sans-serif;
 	font-size:2rem;
