--- a/css/black.css
+++ b/css/black.css
@@ -15,7 +15,7 @@
 .main-navigation li:hover > a,
 .main-navigation li.current_page_item a,
 .main-navigation li.current-menu-item a {
-	background-color: #000;
+	background-color: #4d4d4f;
 }
 .main-navigation ul ul a:hover {
 	color: #FFF;
